fixed health ui bug in separate coordinator deployment